# pocket-rec709

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  ffmpeg.rs  lib.rs  main.rs  progress.rs
src/components/: Controls.tsx  DropZone.tsx  FileItem.tsx  FileList.tsx  LanguageSwitcher.tsx  Settings.tsx
src/hooks/: useConversion.ts  useI18n.ts
src/lib/: commands.ts  i18n.ts  types.ts
src/styles/: globals.css
